Fixed bug #71441 (Typehinted Generator with return in try/finally crashes)